--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.2.1",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.1"
+    "mongoose": "^9.1.1",
+    "slugify": "^1.6.6"
   }
 }
