--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
+    "multer": "^2.0.2",
     "slugify": "^1.6.6"
   }
 }
